# LiteSubtitler

./: .gitignore  README.md  build.ps1  pyproject.toml
docs/: 下载并安装工具.md  搭建开发环境.md
docs/demo/: InsideOut2.md  Moana.2016.md
resources/prompts/: 其他.txt  摘要.txt  翻译-模型直译.txt  翻译-深思翻译.txt  翻译-精细意译.txt
resources/styles/: main.qss
src/: config.py  main.py  qrcode_builder.py
src/controller/: subtitles_controller.py
src/core/: base_object.py  work_thread.py
src/core/asr/: asr_data.py  asr_data_builder.py  asr_data_seg.py  base_asr.py  faster_whisper.py
src/core/audio/: audio_spliter.py  audio_tool.py
src/core/image/: image_tool.py
src/core/llm/: llm_translater.py  opanai_checker.py
src/core/srt/: srt_aligner.py  srt_segmentor.py  srt_tool.py
src/core/video/: ffmpeg_handler.py  image_embed_arg.py
src/enums/: base_enums.py  faster_whisper_enums.py  image_pos_enum.py  language_enums.py  supported_audio_enum.py  supported_image_enum.py  supported_subtitle_enum.py  supported_video_enum.py  translate_mode_enum.py
src/model/: file_vo.py  unique_key_value_map.py
src/service/: api_service.py  asr_service.py  audio_service.py  image_service.py  translate_service.py  video_service.py
src/settings/: logger.py  prompt_setting.py
src/task/: step_processor.py  task_obj.py  task_scheduler.py
src/ui/: base_config_facade.py
src/ui/data/: array_table_model.py
src/ui/driver/: ai_chat_thread.py  (+4 more)
src/utils/: common_utils.py  datetime_utils.py  dict_utils.py  file_utils.py  json_repair.py  path_utils.py  string_utils.py  style_utils.py  uuid_utils.py
(+24 files in other folders)
