[tool.poetry]
name = "AILiteSubtitler"
version = "0.1.0"
description = "AI千言字幕"
authors = ["Y00UU <12345@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydub = "^0.25.1"
openai = "^1.65.3"
retry = "^0.9.2"
requests = "^2.32.3"
pillow = "^11.1.0"
pysrt = "^1.1.2"
pyqt6-tools = "^6.4.2.3.3"
fastapi = "^0.112.2"
uvicorn = "^0.35.0"
websockets = "^15.0.1"

[[tool.poetry.source]]
name = "aliyun"
url = "http://mirrors.aliyun.com/pypi/simple"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
